--- a/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/src/styles/ag-custom.css
+++ b/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/src/styles/ag-custom.css
@@ -17,13 +17,14 @@
     --bg-zinc-700: rgb(63 63 70);
     --bg-zinc-900s50: rgb(24 24 27 / 0.5);
     --bg-zinc-900s30: rgb(24 24 27 / 0.3);
+    --bg-zinc-900s20: rgb(24 24 27 / 0.2);
 
     /* @apply bg-zinc-700; */
     /* --ag-foreground-color: rgb(126, 46, 132) !important; */
     --ag-background-color: var(--bg-zinc-800) !important;
     /* --ag-header-foreground-color: rgb(204, 245, 172) !important; */
     --ag-header-background-color: var(--bg-zinc-900) !important;
-    --ag-odd-row-background-color: var(--bg-zinc-900s30) !important;
+    --ag-odd-row-background-color: var(--bg-zinc-900s20) !important;
     /* --ag-header-column-resize-handle-color: rgb(126, 46, 132) !important; */
     --ag-border-color: var(--bg-zinc-800) !important;
 
