added nav sidebar

--- a/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/src/styles/ag-custom.css
+++ b/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/src/styles/ag-custom.css
@@ -31,3 +31,7 @@
     /* --ag-font-size: 17px !important; */
     /* --ag-font-family: monospace !important; */
 }
+
+/* :not([data-status="active"]){
+    color: red;
+} */
